# Radia

./: Makefile  README.md  readme_mac_python.md
cpp/gcc/: Makefile
cpp/py/: Makefile  readme.md
cpp/src/ext/triangle/: features.h  fpu_control.h  readme.md  stdc-predef.h  triangle.c
env/radia_python/: RADIA_Example02.py  RADIA_Example03.py  RADIA_Example04.py  RADIA_Example05.py  RADIA_Example06.py  log_radia_build_py27_macos_make_all.sh  log_radia_build_py27_macos_make_fftw.sh  log_radia_build_py312_macos_make_all.sh  log_radia_build_py39_macos_make.sh  log_radia_build_py39_macos_make_all.sh  log_radia_build_py39_macos_make_fftw.sh  radia_vtk.py
ext_lib/fftw/: CMakeLists.txt
